# SmartDoc_AI

./: README.md  main.py  pyproject.toml  requirements.txt
output/: VISUAL_DIFF_可编辑PDF测试1.pdf.html
src/: ai_engine.py  doc_comparator.py  doc_parser.py  visualizer.py
